crates/pgls_pretty_print/tests/snapshots/multi/tests__create_role_80.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/create_role.sql
snapshot_kind: text
---
CREATE ROLE regress_role_super SUPERUSER;

CREATE ROLE regress_role_admin CREATEDB CREATEROLE REPLICATION BYPASSRLS;

GRANT CREATE ON DATABASE regression TO regress_role_admin WITH GRANT OPTION;

CREATE ROLE regress_role_limited_admin CREATEROLE;

CREATE ROLE regress_role_normal;

SET SESSION AUTHORIZATION regress_role_limited_admin;

CREATE ROLE regress_nosuch_superuser SUPERUSER;

CREATE ROLE regress_nosuch_replication_bypassrls REPLICATION BYPASSRLS;

CREATE ROLE regress_nosuch_replication REPLICATION;

CREATE ROLE regress_nosuch_bypassrls BYPASSRLS;

CREATE ROLE regress_nosuch_createdb CREATEDB;

CREATE ROLE regress_role_limited;

ALTER ROLE regress_role_limited SUPERUSER;

ALTER ROLE regress_role_limited REPLICATION;

ALTER ROLE regress_role_limited CREATEDB;

ALTER ROLE regress_role_limited BYPASSRLS;

DROP ROLE regress_role_limited;

SET SESSION AUTHORIZATION regress_role_admin;

CREATE ROLE regress_replication_bypassrls REPLICATION BYPASSRLS;

CREATE ROLE regress_replication REPLICATION;

CREATE ROLE regress_bypassrls BYPASSRLS;

CREATE ROLE regress_createdb CREATEDB;

ALTER ROLE regress_replication NOREPLICATION;

ALTER ROLE regress_replication REPLICATION;

ALTER ROLE regress_bypassrls NOBYPASSRLS;

ALTER ROLE regress_bypassrls BYPASSRLS;

ALTER ROLE regress_createdb NOCREATEDB;

ALTER ROLE regress_createdb CREATEDB;

ALTER ROLE regress_createdb SUPERUSER;

ALTER ROLE regress_createdb NOSUPERUSER;

CREATE ROLE regress_createrole CREATEROLE NOINHERIT;

GRANT CREATE ON DATABASE regression TO regress_createrole WITH GRANT OPTION;

CREATE ROLE regress_login LOGIN;

CREATE ROLE regress_inherit INHERIT;

CREATE ROLE regress_connection_limit CONNECTION LIMIT 5;

CREATE ROLE regress_encrypted_password PASSWORD 'foo';

CREATE ROLE regress_password_null PASSWORD NULL;

CREATE ROLE regress_noiseword SYSID 12345;

CREATE ROLE regress_nosuch_super IN ROLE regress_role_super;

CREATE ROLE regress_nosuch_dbowner IN ROLE pg_database_owner;

CREATE ROLE regress_inroles
  ROLE regress_role_super,
  regress_createdb,
  regress_createrole,
  regress_login,
  regress_inherit,
  regress_connection_limit,
  regress_encrypted_password,
  regress_password_null;

CREATE ROLE regress_nosuch_recursive ROLE regress_nosuch_recursive;

CREATE ROLE regress_adminroles
  ADMIN regress_role_super,
  regress_createdb,
  regress_createrole,
  regress_login,
  regress_inherit,
  regress_connection_limit,
  regress_encrypted_password,
  regress_password_null;

CREATE ROLE regress_nosuch_admin_recursive ADMIN regress_nosuch_admin_recursive;

SET SESSION AUTHORIZATION regress_createrole;

CREATE DATABASE "regress_nosuch_db";

CREATE ROLE regress_plainrole;

CREATE ROLE regress_rolecreator CREATEROLE;

CREATE ROLE regress_hasprivs CREATEROLE LOGIN INHERIT CONNECTION LIMIT 5;

COMMENT ON ROLE regress_hasprivs IS 'some comment';

ALTER ROLE regress_hasprivs RENAME TO regress_tenant;

ALTER ROLE regress_tenant NOINHERIT NOLOGIN CONNECTION LIMIT 7;

COMMENT ON ROLE regress_role_normal IS 'some comment';

ALTER ROLE regress_role_normal RENAME TO regress_role_abnormal;

ALTER ROLE regress_role_normal NOINHERIT NOLOGIN CONNECTION LIMIT 7;

SET SESSION AUTHORIZATION regress_tenant;

CREATE TABLE tenant_table (i INT);

CREATE INDEX "tenant_idx" ON tenant_table USING btree (i);

CREATE VIEW tenant_view
AS SELECT * FROM pg_catalog.pg_class;

REVOKE ALL ON TABLE tenant_table FROM PUBLIC;

SET SESSION AUTHORIZATION regress_createrole;

DROP INDEX "tenant_idx";

ALTER TABLE tenant_table
  ADD COLUMN t TEXT;

DROP TABLE "tenant_table";

ALTER VIEW tenant_view
  OWNER TO regress_role_admin;

DROP VIEW "tenant_view";

CREATE SCHEMA "regress_tenant_schema" AUTHORIZATION regress_tenant;

REASSIGN OWNED BY regress_tenant TO regress_createrole;

SET createrole_self_grant = 'set, inherit';

CREATE ROLE regress_tenant2;

GRANT CREATE ON DATABASE regression TO regress_tenant2;

SET SESSION AUTHORIZATION regress_tenant2;

CREATE TABLE tenant2_table (i INT);

REVOKE ALL ON TABLE tenant2_table FROM PUBLIC;

SET SESSION AUTHORIZATION regress_createrole;

CREATE SCHEMA "regress_tenant2_schema" AUTHORIZATION regress_tenant2;

ALTER SCHEMA regress_tenant2_schema OWNER TO regress_createrole;

ALTER TABLE tenant2_table
  OWNER TO regress_createrole;

ALTER TABLE tenant2_table
  OWNER TO regress_tenant2;

REVOKE INHERIT OPTION FOR REGRESS_TENANT2 FROM regress_createrole RESTRICT;

ALTER SCHEMA regress_tenant2_schema OWNER TO regress_tenant2;

ALTER TABLE tenant2_table
  OWNER TO regress_createrole;

GRANT REGRESS_TENANT2 TO regress_createrole WITH INHERIT TRUE, SET FALSE;

ALTER TABLE tenant2_table
  OWNER TO regress_createrole;

ALTER TABLE tenant2_table
  OWNER TO regress_tenant2;

DROP TABLE "tenant2_table";

CREATE ROLE regress_read_all_data IN ROLE pg_read_all_data;

CREATE ROLE regress_write_all_data IN ROLE pg_write_all_data;

CREATE ROLE regress_monitor IN ROLE pg_monitor;

CREATE ROLE regress_read_all_settings IN ROLE pg_read_all_settings;

CREATE ROLE regress_read_all_stats IN ROLE pg_read_all_stats;

CREATE ROLE regress_stat_scan_tables IN ROLE pg_stat_scan_tables;

CREATE ROLE regress_read_server_files IN ROLE pg_read_server_files;

CREATE ROLE regress_write_server_files IN ROLE pg_write_server_files;

CREATE ROLE regress_execute_server_program IN ROLE pg_execute_server_program;

CREATE ROLE regress_signal_backend IN ROLE pg_signal_backend;

DROP ROLE regress_tenant;

SET SESSION AUTHORIZATION regress_role_admin;

DROP ROLE regress_nosuch_superuser;

DROP ROLE regress_nosuch_replication_bypassrls;

DROP ROLE regress_nosuch_replication;

DROP ROLE regress_nosuch_bypassrls;

DROP ROLE regress_nosuch_super;

DROP ROLE regress_nosuch_dbowner;

DROP ROLE regress_nosuch_recursive;

DROP ROLE regress_nosuch_admin_recursive;

DROP ROLE regress_plainrole;

REVOKE CREATE ON DATABASE regression FROM regress_createrole CASCADE;

DROP ROLE regress_replication_bypassrls;

DROP ROLE regress_replication;

DROP ROLE regress_bypassrls;

DROP ROLE regress_createdb;

DROP ROLE regress_createrole;

DROP ROLE regress_login;

DROP ROLE regress_inherit;

DROP ROLE regress_connection_limit;

DROP ROLE regress_encrypted_password;

DROP ROLE regress_password_null;

DROP ROLE regress_noiseword;

DROP ROLE regress_inroles;

DROP ROLE regress_adminroles;

DROP ROLE regress_role_super;

DROP ROLE regress_role_admin;

DROP ROLE regress_rolecreator;

RESET session_authorization;

REVOKE CREATE ON DATABASE regression FROM regress_role_admin CASCADE;

DROP INDEX "tenant_idx";

DROP TABLE "tenant_table";

DROP VIEW "tenant_view";

DROP SCHEMA regress_tenant2_schema;

DROP ROLE regress_tenant, regress_tenant;

DROP ROLE regress_tenant2;

DROP ROLE regress_rolecreator;

DROP ROLE regress_role_admin;

DROP ROLE regress_role_limited_admin;

DROP ROLE regress_role_super;

DROP ROLE regress_role_normal;
